Corrected the collapesed Product alignment

--- a/css/allProducts.css
+++ b/css/allProducts.css
@@ -1,6 +1,6 @@
 
 /* Container */
-.container-fluid {
+.container-fluid { 
     padding: 7% 15%;
 }
 
@@ -9,6 +9,15 @@ div#navbar.container-fluid {
     padding: 3% 15% 0%;
 }
 
+/* Button */
+.productBtn{
+    padding: 0 0 5%;
+}
+
+/* product-section */
+.product-section{
+    padding: 0 0 7%;
+}
 /* Products */
 a,
 a:hover {
@@ -65,7 +74,7 @@ a:hover {
 }
 
 .section-products #product-1 .part-1::before {
-    background: url(../images/products/10w-30bgrem.png) no-repeat center;
+    background: url("../images/products/10w-30bgrem.png") no-repeat center;
     background-color: #e9e9e9;
     background-size: cover;
     transition: all 0.3s;
@@ -77,7 +86,7 @@ a:hover {
 }
 
 .section-products #product-3 .part-1::before {
-    background: url("/Impetus-lubricants-main/images/products/4T gold.jpg") no-repeat center;
+    background: url("../images/products/4T gold.jpg") no-repeat center;
     background-size: cover;
 }
 
