--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,10 @@ body{
     padding: 3% 15% 7%;
 }
 
+#titleLine{
+    text-align: left;
+}
+
 /* Container */
 .container-fluid {
     padding: 7% 15%;
